added support for maps